<resources>
    <string name="app_name">Doctors-Fadfadly</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="loading">Loading...</string>
    <string name="Login">Login</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="Signup">Signup</string>
    <string name="Username">Username</string>
    <string name="age">age</string>
    <string name="gender">gender</string>
    <string name="Bachelor">Bachelor</string>
    <string name="Address">Address</string>
</resources>
