<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/log"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background= "@drawable/nocard_1xxxhdpi"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:cardElevation="3dp"
        app:cardCornerRadius="25dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/log">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ic_person_black_24dp"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="40dp"
                android:gravity="center"
                android:text="@string/Signup"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:text="@string/Username"
                android:textSize="20dp"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <EditText
                android:id="@+id/username_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:lines="1"
                android:textSize="16dp"
                android:paddingStart="10dp"
                app:layout_constraintBottom_toBottomOf="@id/username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/username"
                app:layout_constraintTop_toTopOf="@id/username"
                tools:text="Mariam" />
            <TextView
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/age"
                android:textSize="20dp"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="@id/username"
                app:layout_constraintTop_toBottomOf="@id/username" />

            <EditText
                android:id="@+id/age_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:lines="1"
                android:textSize="16dp"
                android:paddingStart="10dp"
                app:layout_constraintBottom_toBottomOf="@id/age"
                app:layout_constraintEnd_toEndOf="@id/username_text"
                app:layout_constraintStart_toStartOf="@id/username_text"
                app:layout_constraintTop_toTopOf="@id/age"
                tools:text="21" />


            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/Email"
                android:textSize="20dp"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="@id/username"
                app:layout_constraintTop_toBottomOf="@id/age" />

            <EditText
                android:id="@+id/email_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:lines="1"
                android:textSize="16dp"
                android:paddingStart="10dp"
                app:layout_constraintBottom_toBottomOf="@id/email"
                app:layout_constraintEnd_toEndOf="@id/username_text"
                app:layout_constraintStart_toStartOf="@id/username_text"
                app:layout_constraintTop_toTopOf="@id/email"
                tools:text="mariamk019@gmail.com" />
            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/password"
                android:textSize="20dp"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="@id/username"
                app:layout_constraintTop_toBottomOf="@id/email" />

            <EditText
                android:id="@+id/password_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:lines="1"
                android:textSize="16dp"
                android:paddingStart="10dp"
                app:layout_constraintBottom_toBottomOf="@id/password"
                app:layout_constraintEnd_toEndOf="@id/username_text"
                app:layout_constraintStart_toStartOf="@id/username_text"
                app:layout_constraintTop_toTopOf="@id/password"
                tools:text="mariam" />
            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/gender"
                android:textSize="20dp"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="@id/username"
                app:layout_constraintTop_toBottomOf="@id/password" />

            <RadioGroup
                android:id="@+id/radio"
                app:layout_constraintStart_toStartOf="@id/username_text"
                app:layout_constraintTop_toTopOf="@id/gender"
                app:layout_constraintBottom_toBottomOf="@id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:text="Male"

                    />

                <RadioButton android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:text="Female" />
            </RadioGroup>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:lines="1"
                android:textSize="16dp"
                android:paddingStart="10dp"
                app:layout_constraintTop_toBottomOf="@id/gender"
                app:layout_constraintStart_toStartOf="@id/username_text"
                android:id="@+id/nationalId_register_edittext"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="1234556"

               />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textSize="20dp"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="@id/username"
                android:text="National-ID"
                app:layout_constraintTop_toBottomOf="@id/gender"

                android:id="@+id/nationalId_register"

                />

            <EditText
                android:id="@+id/address_register_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:lines="1"
                android:textSize="16dp"
                android:paddingStart="10dp"
                app:layout_constraintTop_toBottomOf="@id/nationalId_register_edittext"
                app:layout_constraintStart_toStartOf="@id/username_text"
                app:layout_constraintEnd_toEndOf="parent" />
            <TextView


                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textSize="20dp"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="@id/username"
                android:text="@string/Bachelor"
                app:layout_constraintTop_toBottomOf="@id/nationalId_register"

                android:id="@+id/address_register"

                />



            <EditText


                android:id="@+id/bachelor_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:lines="2"
                android:textSize="16dp"
                android:paddingStart="10dp"
                app:layout_constraintTop_toBottomOf="@id/address_register_edittext"
                app:layout_constraintStart_toStartOf="@id/username_text"
                app:layout_constraintEnd_toEndOf="parent" />
            <TextView


                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textSize="20dp"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="@id/username"
                android:text="@string/Address"
                app:layout_constraintTop_toBottomOf="@id/address_register"

                android:id="@+id/bachelor"

                />
            <Button
                android:id="@+id/button_Register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginBottom="5dp"
                android:paddingStart="70dp"
                android:paddingEnd="70dp"
                android:background="@drawable/rounded_button"
                android:text="submit"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bachelor_edit"
                app:layout_constraintBottom_toBottomOf="parent"
                />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>